fix: hubspot checkbox list margin and gaps

--- a/src/assets/styles/hsform.css
+++ b/src/assets/styles/hsform.css
@@ -171,6 +171,13 @@ strong {
   margin-right: 24px;
 }
 
+.inputs-list.multi-container {
+  display: flex !important;
+  flex-direction: column !important;
+  gap: 1rem !important;
+  margin-bottom: 1rem;
+}
+
 .hs-form-checkbox-display {
   display: flex !important;
   align-items: center !important;
